feature(#51): Improved alert banner

--- a/apps/docs/src/pages/docs/getting-started/introduction.mdx
+++ b/apps/docs/src/pages/docs/getting-started/introduction.mdx
@@ -9,7 +9,7 @@ export const getMetadata = () => ({
 
 <div class="banner banner--alert" role="alert">
   <p class="banner__title">Beta Notice</p>
-  <p>The Ecopages documentation is currently in beta. The API is not stable yet and will have major changes before the first stable release. Use at your own risk.</p>
+  <p>The Ecopages documentation is currently in beta. The API is not stable yet and will have major changes before the first stable release.</p>
 </div>
 
 # Welcome to Ecopages
