added link to github examples

--- a/apps/docs/src/pages/docs/getting-started/introduction.mdx
+++ b/apps/docs/src/pages/docs/getting-started/introduction.mdx
@@ -10,6 +10,10 @@ export const getMetadata = () => ({
 <div class="banner banner--alert" role="alert">
   <p class="banner__title">Beta Notice</p>
   <p>The Ecopages documentation is currently in beta. The API is not stable yet and will have major changes before the first stable release.</p>
+  <a href="https://github.com/ecopages/ecopages/tree/main/examples/starter-ghtml" target="_blank" class="banner__link">
+    <span>Start a project, check out the examples</span>
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-square-code"><path d="M10 9.5 8 12l2 2.5"/><path d="m14 9.5 2 2.5-2 2.5"/><rect width="18" height="18" x="3" y="3" rx="2"/></svg>
+  </a>
 </div>
 
 # Welcome to Ecopages
