--- a/apps/docs/src/pages/docs/getting-started/configuration.mdx
+++ b/apps/docs/src/pages/docs/getting-started/configuration.mdx
@@ -120,7 +120,7 @@ import { mdxPlugin } from '@ecopages/mdx';
 
 const config = await new ConfigBuilder()
     .setRootDir(import.meta.dir)
-    .setBaseUrl(process.env.ECOPAGES_BASE_URL)
+    .setBaseUrl(import.meta.env.ECOPAGES_BASE_URL)
     .setIntegrations([kitajsPlugin(), mdxPlugin()])
     .build();
 
