--- a/apps/docs/src/pages/docs/getting-started/introduction.mdx
+++ b/apps/docs/src/pages/docs/getting-started/introduction.mdx
@@ -7,7 +7,7 @@ export const getMetadata = () => ({
   description: 'Discover Ecopages: A resource-efficient static site generator',
 })
 
-<div class="banner banner--alert" role="alert">
+<div class="banner banner--alert mt-4" role="alert">
   <p class="banner__title">Beta Notice</p>
   <p>The Ecopages documentation is currently in beta. The API is not stable yet and will have major changes before the first stable release.</p>
   <a href="https://github.com/ecopages/ecopages/tree/main/examples/starter-ghtml" target="_blank" class="banner__link">
