feature(#65): Updated docs

--- a/apps/docs/src/pages/docs/getting-started/configuration.mdx
+++ b/apps/docs/src/pages/docs/getting-started/configuration.mdx
@@ -90,6 +90,10 @@ The directory containing your reusable components.
 File extensions for script files. These are included in the page but not rendered as components. Dependencies are automatically resolved.
 </ApiField>
 
+<ApiField name="additionalWatchPaths" type="string[]" setter="setAdditionalWatchPaths">
+Add additional files to monitor for changes. This is useful for tracking files that are not included in the Ecopages build process. It accepts an array of files or directories.
+</ApiField>
+
 <ApiField name="robotsTxt" type="RobotsPreferences" defaultValue={`{ "*": [], Googlebot: ["/public/assets/images/"] }`} setter="setRobotsTxt">
 Configuration for the robots.txt file.
 </ApiField>
