feature: updated docs

--- a/apps/docs/src/pages/docs/core/components.mdx
+++ b/apps/docs/src/pages/docs/core/components.mdx
@@ -158,7 +158,7 @@ const HomePage: EcoComponent = () =>
   html`${BaseLayout({
     class: 'main-content',
     children: html`
-      <h1 class="main-title">Ecopages</h1>
+      <h1>Ecopages</h1>
       ${RadiantCounter({
         count: 5,
       })}
