--- a/apps/docs/src/pages/docs/core/concepts.mdx
+++ b/apps/docs/src/pages/docs/core/concepts.mdx
@@ -80,7 +80,7 @@ import { type EcoComponent, type GetMetadata, html } from '@ecopages/core';
 const HomePage: EcoComponent = () => html`${BaseLayout({
     class: 'main-content',
     children: html`
-      <h1 class="main-title">Ecopages</h1>
+      <h1>Ecopages</h1>
       !${RadiantCounter({
         count: 5,
       })}
