--- a/apps/docs/src/pages/docs/core/layouts.mdx
+++ b/apps/docs/src/pages/docs/core/layouts.mdx
@@ -109,7 +109,7 @@ import { type EcoComponent, html } from '@ecopages/core';
 const HomePage: EcoComponent = () => html`${BaseLayout({
   class: 'main-content',
   children: html`
-    <h1 class="main-title">Welcome to Ecopages</h1>
+    <h1>Welcome to Ecopages</h1>
     <p>This is the homepage of your website.</p>
   `,
 })}`;
