--- a/apps/docs/src/pages/docs/integrations/lit.mdx
+++ b/apps/docs/src/pages/docs/integrations/lit.mdx
@@ -156,7 +156,7 @@ const HomePage: EcoComponent = () =>
   html`${BaseLayout({
     class: 'main-content',
     children: html\`
-      <h1 class="main-title">Home</h1>
+      <h1>Home</h1>
       <lit-counter count="8"></lit-counter>
     `,
   })}`;
