feature(#83) Added jit css file update via postcssProcessor plugin

--- a/apps/docs/src/pages/docs/core/concepts.mdx
+++ b/apps/docs/src/pages/docs/core/concepts.mdx
@@ -42,9 +42,9 @@ By default, Ecopages uses Tailwind CSS with PostCSS for styling. This provides a
 ```typescript
 const config = await new ConfigBuilder()
   // ... other configurations
-  .setTailwindConfig({
-    input: 'styles/tailwind.css',
-  })
+  .setProcessors([
+    postcssProcessorPlugin()
+  ])
   .build();
 ```
 </CodeBlock>
