--- a/apps/docs/src/pages/docs/core/pages.mdx
+++ b/apps/docs/src/pages/docs/core/pages.mdx
@@ -69,7 +69,7 @@ To use components in your pages, import them and include them in your HTML templ
 ```typescript
 import { RadiantCounter } from '@/components/radiant-counter';
 import { BaseLayout } from '@/layouts/base-layout';
-import { type EcoComponent, type GetMetadata, html, resolveComponentsScripts, removeComponentsScripts } from '@ecopages/core';
+import { type EcoComponent, type GetMetadata, html, resolveComponentsScripts, flagComponentsAsDynamic } from '@ecopages/core';
 
 const HomePage: EcoComponent = () => html`${BaseLayout({
     class: 'main-content',
@@ -89,7 +89,7 @@ const HomePage: EcoComponent = () => html`${BaseLayout({
 HomePage.config = {
     importMeta: import.meta,
     dependencies: {
-      components: [BaseLayout, ...removeComponentsScripts([RadiantCounter])],
+      components: [BaseLayout, ...flagComponentsAsDynamic([RadiantCounter])],
     },
 };
 ```
