--- a/apps/docs/src/pages/docs/core/concepts.mdx
+++ b/apps/docs/src/pages/docs/core/concepts.mdx
@@ -36,7 +36,9 @@ This configuration tells Ecopages which files to use for specific parts of the p
 
 ## CSS Processing
 
-By default, Ecopages uses Tailwind CSS with PostCSS for styling. This provides a powerful and flexible system for managing your styles. You can customize this in your `eco.config.ts` file:
+By default, Ecopages uses plain css for styling. 
+We currently provide a simple Postcss and Tailwind (v3) plugin that provides a powerful and flexible system for managing your styles. 
+You can customize this in your `eco.config.ts` file:
 
 <CodeBlock>
 ```typescript
