chore: cleanup lock

--- a/apps/docs/src/pages/docs/getting-started/configuration.mdx
+++ b/apps/docs/src/pages/docs/getting-started/configuration.mdx
@@ -46,7 +46,7 @@ The root directory of your project, used to resolve paths to your project files.
 The base URL of your project, used for generating absolute URLs for your pages.
 </ApiField>
 
-<ApiField name="defaultMetadata" type="PageMetadataProps" defaultValue="{ title: 'Ecopages', description: 'Ecopages' }" setter="setDefaultMetadata">
+<ApiField name="defaultMetadata" type="PageMetadataProps" defaultValue="{ title: 'Ecopages', description: 'This is a static site generated with Ecopages' }" setter="setDefaultMetadata">
 Default metadata for your pages. This is merged with page-specific metadata when provided.
 </ApiField>
 
