feature(81) server config + routes

--- a/apps/docs/src/pages/docs/ecosystem/postcss-processor.mdx
+++ b/apps/docs/src/pages/docs/ecosystem/postcss-processor.mdx
@@ -4,8 +4,8 @@ import { DocsLayout } from '@/layouts/docs-layout';
 export const layout = DocsLayout;
 
 export const getMetadata = () => ({
-    title: 'Docs | PostCSS Processor',
-    description: 'Learn how to use the PostCSS processor in Ecopages',
+  title: 'Docs | PostCSS Processor',
+  description: 'Learn how to use the PostCSS processor in Ecopages',
 })
 
 # PostCSS Processor
@@ -142,6 +142,8 @@ The processor includes built-in error handling:
 
 ## Best Practices
 
-1. Keep your Tailwind CSS file in a dedicated `styles` directory
+1. Keep your css file tidy and well-structured
+   - Use a consistent naming convention for classes and IDs
+   - Organize styles into separate files for better maintainability
 2. Use PostCSS features like nesting for better CSS organization
 3. Let the processor handle vendor prefixing and optimization
